compress-dialog: fix dialog width changes

The compress dialog has a width allocation request that can be smaller than the
width of description labels in various languages other than english. In order to
fix this, use a label widget for each description and group them in a
homogeneous GtkStack.

https://bugzilla.gnome.org/show_bug.cgi?id=771435